bin_PROGRAMS = callbuilder
callbuilder_SOURCES = callbuilder.cpp parser.cpp CDRBuilder.cpp monmessage.cpp \
		CBDialog.cpp lib.cpp

# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
callbuilder_LDFLAGS = $(all_libraries) 
noinst_HEADERS = parser.h callbuilder.h CBDialog.h CDRBuilder.h Errors.h
