bin_PROGRAMS = callbuilder
callbuilder_SOURCES = callbuilder.cpp parser.cpp CDRBuilder.cpp monmessage.cpp \
	unipar_pf.cpp

# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
callbuilder_LDFLAGS = $(all_libraries) 
noinst_HEADERS = parser.h callbuilder.h CDRBuilder.h Errors.h
